[workspace]
members = [
    "crates/hermes-core",
    "crates/hermes-math",
    "crates/hermes-protocol",
    "crates/hermes-plugins",
    "targets/hermes-node",
    "targets/hermes-sim",
    "tools/hermes-cli",
]


[workspace.metadata]
description = "Hermes — a modular robotics framework (workspace manager)"
