[package]
name = "hermes-sim"
version = "0.1.0"
edition = "2021"
description = "PC simulator target for Hermes. Minimal program for testing and integration."

[[bin]]
name = "hermes-sim"
path = "src/main.rs"

[dependencies]
hermes-core = { path = "../../crates/hermes-core" }
hermes-math = { path = "../../crates/hermes-math" }
hermes-protocol = { path = "../../crates/hermes-protocol" }
