[package]
name = "hermes-node"
version = "0.1.0"
edition = "2021"
description = "Firmware target for embedded node (ESP32). This example is a placeholder for an embedded main."

[[bin]]
name = "hermes-node"
path = "src/main.rs"

[dependencies]
hermes-core = { path = "../../crates/hermes-core" }
hermes-protocol = { path = "../../crates/hermes-protocol" }
